--- a/codalab/apps/web/templates/web/my/settings.html
+++ b/codalab/apps/web/templates/web/my/settings.html
@@ -59,7 +59,6 @@
         </div>
     </div>
 
-    <!--
     <div class="row">
         <div class="col-sm-12">
             <h4>Team</h4>
@@ -77,7 +76,6 @@
             </table>
         </div>
     </div>
-    -->
 
     <div class="row">
         <div class="col-sm-12">
@@ -144,6 +142,8 @@
         </div>
     </div>
     -->
+
+    <input type="submit" class="btn btn-primary margin-top" value="Save Changes">
 </form>
 {% endblock %}
 
