feat: resolves #1140, buttons easier to understand and textarea hidden when not needed

--- a/codalab/apps/web/templates/web/common/_submission_details_template.html
+++ b/codalab/apps/web/templates/web/common/_submission_details_template.html
@@ -6,8 +6,9 @@
                     <div class="submission_details">
                         <div class="bundle__meta__desc">
                             <p class="submission_description">No description given.</p>
-                            <textarea name="updated_description" placeholder="new description" style="display: block; width: 100%; margin-bottom: 12px;"></textarea>
-                            <button class="btn btn-primary update_description">update description</button>
+                            <textarea name="updated_description" class="hide" placeholder="new description" style="display: block; width: 100%; margin-bottom: 12px;"></textarea>
+                            <button class="btn btn-primary save_description_btn hide">save description</button>
+                            <button class="btn btn-primary update_description_btn">update description</button>
                             <p class="submission_team_name"></p>
                             <p class="submission_method_name"></p>
                             <p class="submission_method_description"></p>
