--- a/codalab/apps/web/templates/web/competitions/_results_page.html
+++ b/codalab/apps/web/templates/web/competitions/_results_page.html
@@ -21,6 +21,9 @@
         {% else %}
             <p>None</p>
         {% endif %}
+
+        <p><b>Max submissions per day: </b> {{ phase.max_submissions_per_day }}</p>
+        <p><b>Max submissions total: </b> {{ phase.max_submissions }}</p>
     </div>
     {% if groups|length > 0 %}
         <a class="icon-excel btn btn-default" href="/competitions/{{phase.competition.id}}/results/{{phase.id}}/data">Download CSV</a>
