--- a/codalab/apps/web/templates/web/competitions/_submit_results_page.html
+++ b/codalab/apps/web/templates/web/competitions/_submit_results_page.html
@@ -20,6 +20,9 @@
         {% else %}
             <p>None</p>
         {% endif %}
+
+        <p><b>Max submissions per day: </b> {{ phase.max_submissions_per_day }}</p>
+        <p><b>Max submissions total: </b> {{ phase.max_submissions }}</p>
     </div>
 
     {% if phase.is_active %}
