refactor: Change keybinding for console, from / to c
#1104

--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -35,7 +35,7 @@
                 <h5>General</h5>
                 <table class="table table-striped">
                     <tr>
-                        <td><kbd>/</kbd> Jump to action bar</td>
+                        <td><kbd>c</kbd> Jump to the console</td>
                     </tr>
                     <tr>
                         <td><kbd>E</kbd> Toggle editing mode</td>
