feat: Issue #1105 ability to resize height of action bar

--- a/codalab/apps/web/static/less/worksheets.less
+++ b/codalab/apps/web/static/less/worksheets.less
@@ -48,7 +48,7 @@ html, body, #worksheet_container {height:100%;}
       text-align:center;
       // padding:10px 0;
       z-index:@zindex-navbar;
-      background-color:#efefef;
+      background-color:fade(#efefef, 90%);
       // border-bottom:2px solid @navbar-default-border;
       // .box-shadow(0 2px 8px @gray-dark);
       // .transition(top .35s ease);
