--- a/codalab/apps/web/static/less/actionbar.less
+++ b/codalab/apps/web/static/less/actionbar.less
@@ -8,6 +8,7 @@
   text-align:left;
   margin-left: auto;
   margin-right: auto;
+  max-width:700px;
 }
 .terminal .terminal-output .format,
 .cmd .format,
@@ -27,6 +28,7 @@
     position: fixed;
 }
 .terminal {
+    padding:0 10px;
     position: relative;
     overflow: hidden;
 }
