--- a/codalab/apps/web/templates/web/competitions/view.html
+++ b/codalab/apps/web/templates/web/competitions/view.html
@@ -205,7 +205,7 @@
                                         <th width="125" data-sort="string"><b>Date</b></th>
                                         <th data-sort="string"><b>Description</b></th>
                                         {% for label in competition.get_score_headers %}
-                                            <td width="100">{{ label }}</td>
+                                            <td width="100" data-sort="string"><b>{{ label }}</b></td>
                                         {% endfor %}
                                         <th width="100" data-sort="string"><b>Score</b></th>
                                         <th width="100" data-sort="string"><b>Likes</b></th>
@@ -224,7 +224,7 @@
                                         <td>{{ submission.submitted_at|date:"M d Y" }}</td>
                                         <td><p class="truncate-readmore">{{ submission.description|default_if_none:""|escape }}</p></td>
                                         {% for label, value in submission.get_scores_as_tuples %}
-                                            <td>{{ value }}</td>
+                                            <td>{{ value|floatformat:4 }}</td>
                                         {% endfor %}
                                         <td>{{ submission.get_default_score|floatformat:3 }}</td>
                                         <td>
