--- a/codalab/apps/web/templates/web/my/submissions.html
+++ b/codalab/apps/web/templates/web/my/submissions.html
@@ -110,7 +110,7 @@
             if(confirm("Are you sure you want to mark this submission as failed?")) {
                 var parent_tr = $(this).parents('tr');
                 var pk = parent_tr.prop('id');
-                $.get("/competitions/mark_as_failed/" + pk)
+                $.post("/competitions/mark_as_failed/" + pk)
                     .success(function() {
                         parent_tr.find('td:nth-child(4)').text('Failed');
                     })
