--- a/codalab/apps/web/templates/base.html
+++ b/codalab/apps/web/templates/base.html
@@ -17,7 +17,7 @@
     {% block meta %}
     {% endblock %}
 
-    <title>CodaLab - {% block head_title %}{% endblock %}</title>
+    <title>CodaLab [TEST DEPLOY!] - {% block head_title %}{% endblock %}</title>
 
     {% block css %}
         <!-- Included CSS Files (Compressed) -->
