--- a/codalab/apps/web/templates/web/my/_competition_tile.html
+++ b/codalab/apps/web/templates/web/my/_competition_tile.html
@@ -29,6 +29,10 @@
             	USD <b>${{ competition.reward|intcomma }}</b> reward
             {% endif %}
         </div>
+
+        <br><br>
+    </div>
+    <div class="row">
     	{% if managed %}
     	<div class="competition-actions" published="{{competition.published}}" class="columns cursor-default myCompetitionButtons">
 			<div class="btn-group btn-group-justified">
