--- a/codalab/apps/web/templates/web/index.html
+++ b/codalab/apps/web/templates/web/index.html
@@ -21,38 +21,39 @@
     <!-- <a href="{% url 'account_signup' %}" class="button">Sign Up</a>-->
     <!-- {% endif %}-->
 
-    <div class="row">
-        <p>
-        CodaLab is an ecosystem for conducting computational
-        research in a more efficient, reproducible, and collaborative manner.
-        </p>
-        <div class="col-sm-6">
-            <p><a href="{%if PREVIEW_WORKSHEETS %}/worksheets{% else %}#{% endif %}"><img src="{{STATIC_URL}}img/icon_experiments.png" alt="CodaLab Worksheets"></a></p>
-            <p><strong>Worksheets</strong> allow you to
-            capture complex research pipelines in a reproducible way
-            and create "executable papers".
-            Use any data format or programming language &mdash; great for the power user!
+    <div class="container">
+        <div class="row">
+            <p>
+            CodaLab is an ecosystem for conducting computational
+            research in a more efficient, reproducible, and collaborative manner.
             </p>
-            <ul class="alt-bullet">
-                <li><a href="/worksheets"><strong>Explore worksheets</strong></a></li>
-            </ul>
+            <div class="col-sm-6">
+                <p><a href="{%if PREVIEW_WORKSHEETS %}/worksheets{% else %}#{% endif %}"><img src="{{STATIC_URL}}img/icon_experiments.png" alt="CodaLab Worksheets"></a></p>
+                <p><strong>Worksheets</strong> allow you to
+                capture complex research pipelines in a reproducible way
+                and create "executable papers".
+                Use any data format or programming language &mdash; great for the power user!
+                </p>
+                <ul class="alt-bullet">
+                    <li><a href="/worksheets"><strong>Explore worksheets</strong></a></li>
+                </ul>
 
+            </div>
+            <div class="col-sm-6">
+                <p><a href="/competitions"><img src="{{STATIC_URL}}img/icon_competitions.png" alt="CodaLab Competitions"></a></p>
+                <p><strong>Competitions</strong>
+                bring together the entire community
+                to tackle the most challenging data and computational problems today.
+                You can win prizes and also create your own competition.
+                </p>
+                <ul class="alt-bullet">
+                    <li><a href="/competitions"><strong>Explore competitions</strong></a></li>
+                </ul>
+            </div>
         </div>
-        <div class="col-sm-6">
-            <p><a href="/competitions"><img src="{{STATIC_URL}}img/icon_competitions.png" alt="CodaLab Competitions"></a></p>
-            <p><strong>Competitions</strong>
-            bring together the entire community
-            to tackle the most challenging data and computational problems today.
-            You can win prizes and also create your own competition.
-            </p>
-            <ul class="alt-bullet">
-                <li><a href="/competitions"><strong>Explore competitions</strong></a></li>
-            </ul>
-        </div>
+
+        <p class="text-center pad-top pad-bottom"><a href="https://github.com/codalab/codalab/wiki/Dev_How-to-Contribute"><strong>Contribute your skills</strong></a> to help develop the CodaLab platform!</p>
     </div>
-
-    <p class="text-center pad-top pad-bottom"><a href="https://github.com/codalab/codalab/wiki/Dev_How-to-Contribute"><strong>Contribute your skills</strong></a> to help develop the CodaLab platform!</p>
-
 {% endblock content %}
 
 {% block js %}
