fix: @raisins why are you always right? container-fluid making some stuff ugly, instead increasing container default width

--- a/codalab/apps/web/static/css/imports.css
+++ b/codalab/apps/web/static/css/imports.css
@@ -9375,3 +9375,8 @@ textarea.table.affiliation > tbody > tr > th input,
 textarea.table.affiliation > tbody > tr > td input {
   height: auto;
 }
+
+
+.container {
+  width: 1200px;
+}
