--- a/codalab/apps/web/templates/base.html
+++ b/codalab/apps/web/templates/base.html
@@ -138,7 +138,7 @@
     {% endblock hero_subheader %}
 
     {% block content_wrapper %}
-        <div class="container-fluid" style="padding-bottom: 40px;">
+        <div class="container" style="padding-bottom: 40px;">
             {% block content %}
             {% endblock content %}
         </div>
