--- a/codalab/apps/web/templates/web/worksheets/detail.html
+++ b/codalab/apps/web/templates/web/worksheets/detail.html
@@ -153,6 +153,7 @@
     <script type="text/jsx" src="{{ STATIC_URL }}js/worksheet/table_bundle_interface.js"></script>
     <script type="text/jsx" src="{{ STATIC_URL }}js/worksheet/worksheet_bundle_interface.js"></script>
     <script type="text/jsx" src="{{ STATIC_URL }}js/worksheet/modal_interface.js"></script>
+    <script type="text/jsx" src="{{ STATIC_URL }}js/worksheet/upload_modal_interface.js"></script>
     {# main entrance point for the worksheet and it's items/bundles #}
     <script type="text/jsx" src="{{ STATIC_URL }}js/worksheet/worksheet_items.js"></script>
     <script type="text/jsx" src="{{ STATIC_URL }}js/worksheet/worksheet_interface.js"></script>
@@ -175,7 +176,6 @@ $(function () {
     ws_obj = new WorksheetContent(worksheet_url);
     ws_bundle_obj = new BundleContent();
     ws_actions = new WorksheetActions(); // Search bar actions
-
 });
 </script>
 
