--- a/codalab/apps/web/templates/web/competitions/submission_metadata.html
+++ b/codalab/apps/web/templates/web/competitions/submission_metadata.html
@@ -20,13 +20,14 @@
     <h4>Submissions</h4>
 
     {% if selected_phase.submissions.all %}
-
         <table class="table table-striped table-bordered">
             <thead>
-                <tr style="text-align: center;">
+                <tr style="text-align: center; font-weight: bold;">
                     <td>Submitted by</td>
-                    <td>Date</td>
+                    <td width="150">Date</td>
                     <td>Compute worker</td>
+                    <td>Submission ID#</td>
+                    <td>Prediction/Scoring?</td>
                     <td>Running processes (in temp dir)</td>
                     <td>Start RAM</td>
                     <td>End RAM</td>
@@ -39,18 +40,22 @@
             <tbody>
 
                 {% for submission in selected_phase.submissions.all %}
-                    <tr>
-                        <td>{{ submission.participant.user.username }}</td>
-                        <td>{{ submission.submitted_at }}</td>
-                        <td>{{ submission.metadata.hostname }}</td>
-                        <td>{{ submission.metadata.simple.processes_running_in_temp_dir }}</td>
-                        <td>{{ submission.metadata.simple.beginning_virtual_memory_usage }}</td>
-                        <td>{{ submission.metadata.simple.beginning_swap_memory_usage }}</td>
-                        <td>{{ submission.metadata.simple.beginning_cpu_usage }}</td>
-                        <td>{{ submission.metadata.simple.end_virtual_memory_usage }}</td>
-                        <td>{{ submission.metadata.simple.end_swap_memory_usage }}</td>
-                        <td>{{ submission.metadata.simple.end_cpu_usage }}</td>
-                    </tr>
+                    {% for metadata in submission.metadatas.all %}
+                        <tr>
+                            <td>{{ metadata.submission.participant.user.username }}</td>
+                            <td>{{ metadata.submission.submitted_at|date:"Y-m-d h:m" }}</td>
+                            <td>{{ metadata.hostname }}</td>
+                            <td>{{ metadata.submission.pk }}</td>
+                            <td>{% if metadata.is_predict %}Prediction{% else %}Scoring{% endif %}</td>
+                            <td>{{ metadata.simple.processes_running_in_temp_dir }}</td>
+                            <td>{{ metadata.simple.beginning_virtual_memory_usage }}</td>
+                            <td>{{ metadata.simple.beginning_swap_memory_usage }}</td>
+                            <td>{{ metadata.simple.beginning_cpu_usage }}</td>
+                            <td>{{ metadata.simple.end_virtual_memory_usage }}</td>
+                            <td>{{ metadata.simple.end_swap_memory_usage }}</td>
+                            <td>{{ metadata.simple.end_cpu_usage }}</td>
+                        </tr>
+                    {% endfor %}
                 {% endfor %}
             </tbody>
         </table>
